drop menu z-index fix

--- a/psf/psf.css
+++ b/psf/psf.css
@@ -31,7 +31,11 @@
     overflow-x: hidden;
 }
 
-.theme-entry .popup, .theme-entry .dialog .theme-entry .drop-menu{
+.theme-entry .popup, .theme-entry .dialog {
+    z-index: 2000!important;
+}
+
+.theme-entry .drop-menu {
     z-index: 2000!important;
 }
 
